<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutSetupSystemStorageReset"
    android:visibility="gone">

    <TextView
        android:id="@+id/tvSetupStorageStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55px"
        android:layout_marginTop="55px"
        android:text="@string/str_setup_storage_storage"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22px"/>
    <TextView
        android:id="@+id/tvSetupStorageTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSetupStorageStorage"
        android:layout_alignLeft="@+id/tvSetupStorageStorage"
        android:layout_marginTop="10px"
        android:text="@string/str_setup_storage_total"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupStorageTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSetupStorageTotal"
        android:layout_alignTop="@+id/tvSetupStorageTotal"
        android:layout_marginLeft="3px"
        android:textColor="@color/white"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupStorageUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSetupStorageTotal"
        android:layout_marginLeft="220px"
        android:text="@string/str_setup_storage_used"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupStorageUsedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSetupStorageUsed"
        android:layout_alignTop="@+id/tvSetupStorageUsed"
        android:layout_marginLeft="3px"
        android:textColor="@color/white"
        android:textSize="20px"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_marginTop="145px"
        android:paddingLeft="55px"
        android:paddingRight="55px"
        android:src="@drawable/dashed_line"
        android:layerType="software"/>

    <TextView
        android:id="@+id/tvSetupStorageRetention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55px"
        android:layout_marginTop="172px"
        android:text="@string/str_setup_storage_retention"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22px"/>

    <RadioGroup
        android:id="@+id/rgFileRetention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSetupStorageRetention"
        android:layout_marginTop="220px"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbFileRetention3Month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10px"
            android:buttonTint="@color/red"
            android:background="@drawable/selector_transparent"
            android:nextFocusLeft="@+id/rbFileRetentionNone"
            android:nextFocusDown="@+id/tvSetupSTBResetButton"
            android:nextFocusRight="@+id/rbFileRetention6Month"
            android:textColor="@color/white"
            android:textSize="22px"
            android:textStyle="bold"
            android:text="@string/str_setup_storage_retention_3months"/>
        <RadioButton
            android:id="@+id/rbFileRetention6Month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10px"
            android:layout_marginLeft="40px"
            android:buttonTint="@color/red"
            android:background="@drawable/selector_transparent"
            android:nextFocusLeft="@+id/rbFileRetention3Month"
            android:nextFocusDown="@+id/tvSetupSTBResetButton"
            android:nextFocusRight="@+id/rbFileRetentionNone"
            android:textColor="@color/white"
            android:textSize="22px"
            android:textStyle="bold"
            android:text="@string/str_setup_storage_retention_6months"/>
        <RadioButton
            android:id="@+id/rbFileRetentionNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10px"
            android:layout_marginLeft="40px"
            android:buttonTint="@color/red"
            android:background="@drawable/selector_transparent"
            android:nextFocusLeft="@+id/rbFileRetention6Month"
            android:nextFocusDown="@+id/tvSetupSTBResetButton"
            android:nextFocusRight="@+id/rbFileRetention3Month"
            android:textColor="@color/white"
            android:textSize="22px"
            android:textStyle="bold"
            android:text="@string/str_setup_storage_retention_none"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSetupStorageRetention"
        android:layout_marginTop="280px"
        android:text="@string/str_setup_storage_retention_guide"
        android:textColor="@color/white"
        android:textSize="18px"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_marginTop="330px"
        android:paddingLeft="55px"
        android:paddingRight="55px"
        android:src="@drawable/dashed_line"
        android:layerType="software"/>

    <TextView
        android:id="@+id/tvSetupSTBReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55px"
        android:layout_marginTop="360px"
        android:text="@string/str_setup_storage_reset"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22px"/>

    <TextView
        android:id="@+id/tvSetupSTBResetButton"
        android:layout_width="140px"
        android:layout_height="35px"
        android:layout_marginLeft="55px"
        android:layout_marginTop="410px"
        android:focusable="true"
        android:clickable="true"
        android:nextFocusUp="@+id/rbFileRetention3Month"
        android:nextFocusDown="@+id/tvSetupSystemStorageSave"
        android:background="@drawable/selector_setup_button_yellow"
        android:gravity="center"
        android:text="@string/str_setup_storage_reset_button"
        android:textColor="@color/black"
        android:textSize="18px"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSetupSTBResetButton"
        android:layout_alignTop="@+id/tvSetupSTBResetButton"
        android:layout_marginTop="4px"
        android:layout_marginLeft="10px"
        android:text="@string/str_setup_storage_reset_guide"
        android:textColor="@color/white"
        android:textSize="18px"/>

    <TextView
        android:id="@+id/tvSetupSystemStorageSave"
        android:layout_width="150px"
        android:layout_height="53px"
        android:layout_marginLeft="842px"
        android:layout_marginTop="546px"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/selector_setup_button_save"
        android:nextFocusUp="@id/tvSetupSTBResetButton"
        android:nextFocusRight="@+id/tvSetupSystemStorageCancel"
        android:gravity="center"
        android:text="@string/str_setup_save"
        android:textColor="@color/white"
        android:textSize="22px"/>
    <TextView
        android:id="@+id/tvSetupSystemStorageCancel"
        android:layout_width="150px"
        android:layout_height="53px"
        android:layout_toRightOf="@+id/tvSetupSystemStorageSave"
        android:layout_alignTop="@+id/tvSetupSystemStorageSave"
        android:layout_marginLeft="10px"
        android:background="@drawable/selector_setup_button_cancel"
        android:nextFocusUp="@id/tvSetupSTBResetButton"
        android:nextFocusLeft="@+id/tvSetupSystemStorageSave"
        android:gravity="center"
        android:focusable="true"
        android:text="@string/str_setup_cancel"
        android:textColor="@color/white"
        android:textSize="22px"/>
</android.support.percent.PercentRelativeLayout>