<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutSetupSystemFWUpdate"
    android:visibility="gone">

    <TextView
        android:id="@+id/tvSetupFirmwareVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55px"
        android:layout_marginTop="55px"
        android:text="@string/str_setup_firmware_version"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22px"/>
    <TextView
        android:id="@+id/tvSetupFirmwareVersionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5px"
        android:layout_toRightOf="@+id/tvSetupFirmwareVersion"
        android:layout_alignBottom="@+id/tvSetupFirmwareVersion"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupFirmwareDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5px"
        android:layout_toRightOf="@+id/tvSetupFirmwareVersionValue"
        android:layout_alignBottom="@+id/tvSetupFirmwareVersionValue"
        android:textColor="@color/white"
        android:textSize="20px"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_marginTop="110px"
        android:paddingLeft="55px"
        android:paddingRight="55px"
        android:src="@drawable/dashed_line"
        android:layerType="software"/>

    <TextView
        android:id="@+id/tvSetupFirmwareCheckResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55px"
        android:layout_marginTop="140px"
        android:text="@string/str_setup_firmware_check_result"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22px"/>

    <TextView
        android:id="@+id/tvSetupFirmwareNoUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_below="@+id/tvSetupFirmwareCheckResult"
        android:layout_alignLeft="@+id/tvSetupFirmwareCheckResult"
        android:text="@string/str_setup_no_new_firmware"
        android:textColor="@color/white"
        android:textSize="20px"/>

    <TextView
        android:id="@+id/tvSetupFirmwareUpdate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_below="@+id/tvSetupFirmwareCheckResult"
        android:layout_alignLeft="@+id/tvSetupFirmwareCheckResult"
        android:visibility="invisible"
        android:text="@string/str_setup_new_firmware_available1"
        android:textColor="@color/white"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupFirmwareNewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2px"
        android:layout_toRightOf="@+id/tvSetupFirmwareUpdate1"
        android:layout_alignTop="@+id/tvSetupFirmwareUpdate1"
        android:visibility="invisible"
        android:textColor="@color/yellow"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupFirmwareUpdate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2px"
        android:layout_toRightOf="@+id/tvSetupFirmwareNewVersion"
        android:layout_alignTop="@+id/tvSetupFirmwareNewVersion"
        android:visibility="invisible"
        android:text="@string/str_setup_new_firmware_available2"
        android:textColor="@color/white"
        android:textSize="20px"/>
    <TextView
        android:id="@+id/tvSetupFirmwareUpdate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:layout_below="@+id/tvSetupFirmwareUpdate1"
        android:layout_alignLeft="@+id/tvSetupFirmwareUpdate1"
        android:visibility="invisible"
        android:text="@string/str_setup_new_firmware_available3"
        android:textColor="@color/white"
        android:textSize="20px"/>

    <TextView
        android:id="@+id/tvSetupSystemFirmwareConfirm"
        android:layout_width="150px"
        android:layout_height="53px"
        android:layout_marginLeft="842px"
        android:layout_marginTop="546px"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/selector_setup_button_save"
        android:nextFocusRight="@+id/tvSetupSystemFirmwareCancel"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/str_setup_confirm"
        android:textColor="@color/white"
        android:textSize="22px"/>
    <TextView
        android:id="@+id/tvSetupSystemFirmwareCancel"
        android:layout_width="150px"
        android:layout_height="53px"
        android:layout_toRightOf="@+id/tvSetupSystemFirmwareConfirm"
        android:layout_alignTop="@+id/tvSetupSystemFirmwareConfirm"
        android:layout_marginLeft="10px"
        android:background="@drawable/selector_setup_button_cancel"
        android:nextFocusLeft="@+id/tvSetupSystemFirmwareConfirm"
        android:gravity="center"
        android:focusable="true"
        android:visibility="invisible"
        android:text="@string/str_setup_cancel"
        android:textColor="@color/white"
        android:textSize="22px"/>
</android.support.percent.PercentRelativeLayout>